# playhound

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  publish.yml
data/: list_request.json.template
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs  request.rs  transport.rs
src/blocking/: client.rs  mod.rs  transport.rs
src/protocol/: app.rs  common.rs  list.rs  mod.rs  reviews.rs  search.rs  suggestions.rs  wire.rs
tests/: live_fixtures.rs  public_api.rs  repository_policy.rs
tests/fixtures/live/: README.md  app.json  list.json  reviews.json  search.json  suggestions.json
tests/support/: fixtures.rs  transport.rs
tests/unit/: blocking_client.rs  cli.rs  client.rs  config.rs  model.rs  parser.rs  protocol_app.rs  protocol_list.rs  protocol_reviews.rs  protocol_search.rs  protocol_suggestions.rs  protocol_wire.rs  transport.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  sanitize.rs
xtask/tests/: sanitize.rs
