[package]
name = "playhound-xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
serde_json = "1"
url = "2"

[lib]
doctest = false

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
